test(service): fix failing tests